--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <script type="text/javascript">
     var app = Elm.fullscreen(Elm.Drummer);
     app.ports.tellServer.subscribe(function(state) {
+        var req = new XMLHttpRequest();
+        req.open("POST", "localhost:7000");
+        req.send(JSON.stringify(state));
         console.log(JSON.stringify(state));
     });
 </script>
